# django_ninja

./: .gitignore
client/: package.json
client/app/: globals.css  layout.jsx  page.jsx
client/components/: AuthModal.jsx  AuthProvider.jsx  Navbar.jsx  TodoApp.jsx  TodoItem.jsx  TodoList.jsx
client/lib/: auth.js
server/: pyproject.toml
server/api/v1/: router.py
server/apps/todos/: admin.py  api.py  apps.py  models.py  schemas.py
server/apps/todos/migrations/: 0001_initial.py
server/apps/users/: admin.py  api.py  apps.py  auth.py  models.py  schemas.py  utils.py
server/apps/users/migrations/: 0001_initial.py
server/core/: urls.py
server/core/settings/: base.py  development.py  production.py
